templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: www.helm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: assignment-voting-service
                port: 
                  number: 80
          - path: /result
            pathType: Prefix
            backend:
              service:
                name: assignment-result-service
                port: 
                  number: 80
